Implementata strategia per la gestione di comandi durante il movimento del robot

--- a/frontend/src/app/main/main.component.html
+++ b/frontend/src/app/main/main.component.html
@@ -38,6 +38,10 @@
           <mat-icon class="align-bottom">arrow_back</mat-icon>
           Sinistra
         </li>
+        <li>
+          <mat-icon class="align-bottom">block</mat-icon>
+          Stop
+        </li>
       </ul>
     </div>
   </div>
